--- a/scss/6-components/_navigation_greedy-nav.scss
+++ b/scss/6-components/_navigation_greedy-nav.scss
@@ -90,6 +90,7 @@
 
   &__wrapper {
     position: relative;
+    visibility: hidden;
 
     @include cads-media-breakpoint-up(md) {
       position: absolute;
